add dark mode and chang color in the text

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import "tailwindcss";
-@plugin "daisyui";
+@plugin "daisyui" {
+  themes: light --default, dark --prefersdark;
+}
 
+@custom-variant dark (&:where([data-theme=dark], [data-theme=dark] *));
 
 *{
    font-family: "Lato", sans-serif;
@@ -13,12 +16,13 @@
 
 
 .title {
-  @apply md:text-4xl text-3xl font-bold
+  @apply md:text-4xl text-2xl font-bold
 }
 
 .liner-text{
   @apply bg-linear-to-r to-[#27ae60] from-[#5352ed] bg-clip-text text-transparent
 }
+
 
 .grid-img{
   @apply h-[300px] w-full object-cover block
